fixed hightShare issue when days button clicked and row wrap button added

--- a/01-chartink/daily-candle-screener/style.css
+++ b/01-chartink/daily-candle-screener/style.css
@@ -14,14 +14,21 @@ table {
   /* table-layout: fixed; */
   margin-left: auto;
   margin-right: auto;
+  display: block;
 }
+
 
 td {
   border: 1px solid black;
-  /* word-break: break-all; */
   word-wrap: break-word;
-  width: 70px;
+  /* width: 70px; */
   overflow: hidden;
+}
+
+.row-wrap{
+  display: inline-block;
+  width: 110px;
+  /* background-color: red; */
 }
 
 td:first-child {
